htick 0.03
----------

----- cvs ci ------
Sat Feb 12 16:45:00 IZH 2000
Georgi (patch from Nestyurkin Nikolay, 2:5020/3600):
* added new keyword:
  SaveTic <FileEchoMask> <DirToSaveTic>
  <DirToSaveTic> - where put TIC for fileecho[es] <FileEchoMask>

----- cvs ci ------
Tue Feb  8 00:07:06 NOVT 2000
max (patch from Alex Bronin, 2:5049/36):
* executing command on receiving file
  ExecOnFile <filearea> <filemask> <command>
  command get full filepath as parameter
* increased crc buffer for speed
* continue fixing segmentation fault if field Desc in TIC > 255 chars
* areafix: using filefixKillReports instead areafixKillReports
* lock file contains pid in win32 too
* UTC time in Path
* added Orig to reports

----- cvs ci ------
Sat Feb  5 02:36:03 NOVT 2000
max:
* adopted my changes in fidoconfig for import, export, mandatory & groups

----- cvs ci ------
Sat Jan 29 18:17:00 2000
Georgi:
* if FileAreaBaseDir is "Passthrough", then autocreated filearea is Passthrough
* "htick hatch": added support filemask for replace field in TIC

----- cvs ci ------
Fri Jan 28 21:40:00 CET 2000
sms:
* changed groups from chars to strings

----- cvs ci ------
Sun Jan 23 13:52:00 2000
Georgi:
* fixed bug in function removeDesc
* change code in filelist generator

----- cvs ci ------
Sun Jan 23 04:30:00 2000
Georgi:
* change code in function removeDesc

----- cvs ci ------
Sat Jan 22 22:28:00 2000
Georgi:
* fixed bug in patch from Nestyurkin Nikolay
* added support hatching in Passthrough filearea

----- cvs ci ------
Sat Jan 22 15:38:40 2000
Georgi (patch from Nestyurkin Nikolay, 2:5020/3600):
* added support tokens FileDescPos and FileLDescString
Georgi:
* fixed segmentation fault if field Desc in TIC > 255 chars

----- cvs ci ------
max(patch from Srguei Revtov):
Sun Jan 16 17:21:40 NOVT 2000
* recode under NT (Alex Bronin 2:5049/36)
* fixed \r\r\n under NT

----- cvs ci ------
max:
Mon Jan  3 21:21:59 NOVT 2000
* manual -> mandatory

----- cvs ci ------
Sat Dec 18 19:26:50 1999 